<resources>
    <string name="nom_application" translatable="false">MyPlanner</string>
    <string name="titre_activity_logo">Logo de l\'activité</string>
    <string name="description_logo">Logo Mon Agenda</string>
    <string name="titre_activity_test">Test de mon activté</string>
    <string name="enregistrer">Entregistrer une tâche</string>
    <string name="votre_todolist">Remplissez les champs ci-dessous</string>
    <string name="titre_de_la_tache">Titre de la tâche</string>
    <string name="description_de_la_tache">Description de la tâche</string>
    <string name="date_de_la_tache">Date</string>
    <string name="heure_de_la_tache">Heure</string>
    <string name="ajouter_un_evenement">Ajouter un evenement</string>
    <string name="salut">Salut</string>
    <string name="fermer">Fermer</string>
    <string name="modifier">Modifier</string>
    <string name="supprimer">Supprimer</string>
    <string name="completer">Completer</string>
    <string name="calendrier">Le calendrier</string>
    <string name="menu_mise_a_jour">Mise à jour</string>
    <string name="alert_complete">Voulez vous enregistrer definitivement cette tâche ?</string>
    <string name="confirmation_dialog">Confirmation</string>
    <string name="suppression_dialog">Voulez vous vraiment supprimer cette tâche?</string>
    <string name="ajout_dialog">Voulez vous enregistrer cette tâche?</string>
    <string name="modification_dialog">Voulez vous vraiment modifier cette tâche?</string>
    <string name="oui">Oui</string>
    <string name="titre">Titre</string>
    <string name="description">Description</string>
    <string name="calendrier_et_montre">Calendrier et Montre</string>
    <string name="montitre">Mon titre</string>
    <string name="reminder">Rappel</string>
    <string name="creation_de_compte">Création de compte</string>
    <string name="non">Non</string>
    <string name="toast_erreur_temps">Vous ne pouvez pas créer de tâches dans le passé</string>
    <string name="alarm" translatable="false">Alarme</string>
    <string name="compte_inexistant">Ce compte n\'existe pas</string>
    <string name="hint_mot_de_passe">Mot de passe</string>
    <string name="hint_email">E-mail</string>
    <string name="login">Se connecter</string>
    <string name="creer_compte_message">Vous n\'avez pas de compte?</string>
    <string name="creer_compte_btn_message">Créez en un</string>
    <string name="deja_compte_btn_message">Connectez-vous</string>
    <string name="deja_compte_message">Vous avez déjà un compte?</string>
    <string name="creer_compte">Créer votre compte</string>
    <string name="compte_deja_existe">Un compte avec cet e-mail existe déjà</string>
    <string name="champ_vide">Ce champ ne peut pas etre vide</string>
    <string name="hint_username">Pseudo</string>
    <string name="plus" translatable="false">+</string>
    <string name="modifier_tache">Modifer les détails de votre tâche</string>
    <string name="bienvenue_user">Bienvenue</string>
    <string name="accueil">Accueil</string>
    <string name="connexion">Connexion</string>
    <string name="bienvenue_app">Bienvenue à votre application de gestion des taches</string>
    <string name="logout">Déconnecter</string>
    <string name="details_compte">Votre compte</string>
</resources>