<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controllers.AlarmActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:background="@drawable/ic_baseline_notification_important_24"
        android:contentDescription="@string/todo_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:id="@+id/titre"
        android:text="@string/titre"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:id="@+id/description"
        android:text="@string/description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:id="@+id/heureEtdate"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bntFermer"
        android:textSize="14sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"

        android:text="@string/fermer"
        android:textAllCaps="false"/>


</LinearLayout>